[package]
name = "rusty2"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-rt = '1.0.0'
actix-web = '2.0'
serde = {version = '1.0.104', features = ["derive"]}
serde_json = "1.0"
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
redis = "0.16.0"


# To achieve this functionality, please proceed with 
# the installation of the "taiyuuki.vscode-cargo-scripts" 
# extension.
[package.metadata.scripts]
run = "cargo watch -q -c -x run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
format = "rustfmt --edition 2021 src/*"